--- a/.github/workflows/github_pagerduty_score_calculation.yml
+++ b/.github/workflows/github_pagerduty_score_calculation.yml
@@ -19,9 +19,9 @@ jobs:
         if: ${{ contains(github.event.issue.labels.*.name, 'pager-duty') && contains(github.event.issue.labels.*.name, 'bug') }}
         run: |
           echo "Issue was created using pager-duty template"
-          python github_pagerduty_issue_score_calculation.py
+          python3 .github/github_pagerduty_issue_score_calculation.py
         env:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           ISSUE_BODY: ${{ github.event.issue.body }}
           MY_ACCESS_TOKEN: ${{ secrets.MY_ACCESS_TOKEN}}
-          PAGERDUTY_SCORE_THRESHOLD: ${{secrets.PAGERDUTY_SCORE_THRESHOLD}}
+          PAGERDUTY_SCORE_THRESHOLD: ${{vars.PAGERDUTY_SCORE_THRESHOLD}}
