--- a/.github/ISSUE_TEMPLATE/pager-duty.yaml
+++ b/.github/ISSUE_TEMPLATE/pager-duty.yaml
@@ -23,61 +23,61 @@ body:
       label: "Affected areas"
       description: "What areas of Devtron are impacted by the issue?"
       options:
-        - Devtron dashboard completely down (100) Add URGENT
-        - Login issues (50)
-        - RBAC Issues (40)
-        - CI (50)
-        - CD (50)
-        - App creation (30)
-        - Deployment from Chart store (40)
-        - Security features (50)
-        - CI/CD Plugins (30)
-        - Other CRITICAL functionality (30)
-        - Other NON-CRITICAL functionality (20)
+        - Devtron dashboard completely down 
+        - Login issues 
+        - RBAC Issues 
+        - CI 
+        - CD 
+        - App creation 
+        - Deployment from Chart store 
+        - Security features 
+        - CI/CD Plugins 
+        - Other CRITICAL functionality 
+        - Other NON-CRITICAL functionality
   - type: dropdown
     id: additional-affected-areas
     attributes:
       label: "Additional affected areas"
       description: "Are there any additional affected areas?"
       options:
-        - Devtron dashboard completely down (100)
-        - Login issues (50)
-        - RBAC Issues (40)
-        - CI (50)
-        - CD (50)
-        - App creation (30)
-        - Deployment from Chart store (40)
-        - Security features (50)
-        - CI/CD Plugins (30)
-        - Other CRITICAL functionality (30)
-        - Other NON-CRITICAL functionality (20)
+        - Devtron dashboard completely down 
+        - Login issues 
+        - RBAC Issues 
+        - CI 
+        - CD 
+        - App creation 
+        - Deployment from Chart store 
+        - Security features
+        - CI/CD Plugins 
+        - Other CRITICAL functionality 
+        - Other NON-CRITICAL functionality 
   - type: dropdown
     id: prod-environment
     attributes:
       label: "Prod/Non-prod environments?"
       description: "Is the issue affecting Prod environments?"
       options:
-        - Prod (x2)
-        - Non-prod (x1)
+        - Prod 
+        - Non-prod 
   - type: dropdown
     id: user-unblocked
     attributes:
       label: "Is User unblocked?"
       description: "Is the User unblocked?"
       options:
-        - Yes (x1)
-        - No (x2)
+        - Yes 
+        - No 
   - type: dropdown
     id: user-unblocked-reason
     attributes:
       label: "How was the user un-blocked?"
       description: "If the user was unblocked. How was the user un-blocked?"
       options:
-        - TEMPORARILY - By disabling a CRITICAL functionality (x3) Add URGENT
-        - TEMPORARILY - By disabling a NON-CRITICAL functionality (x1.2)
-        - TEMPORARILY - By doing some changes from the backend/DB (x1)
-        - PERMANENTLY - By giving a workaround (From outside Devtron) (x2)
-        - PERMANENTLY - By giving a workaround (Within Devtron) (x1)
+        - TEMPORARILY - By disabling a CRITICAL functionality 
+        - TEMPORARILY - By disabling a NON-CRITICAL functionality 
+        - TEMPORARILY - By doing some changes from the backend/DB 
+        - PERMANENTLY - By giving a workaround (From outside Devtron) 
+        - PERMANENTLY - By giving a workaround (Within Devtron) 
   - type: textarea
     id: impact
     validations:
