--- a/specs/resourceCatalogue/resource-objects-v2-release-feat.yaml
+++ b/specs/resourceCatalogue/resource-objects-v2-release-feat.yaml
@@ -41,9 +41,14 @@ paths:
                     type: string
                     description: status
                   result:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/DevtronResourceListDto'
+                    type: object
+                    properties:
+                      totalCount:
+                        type: number
+                      data: 
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/DevtronResourceListDto'
   /orchestrator/resource/{kind}/{version}:
     get:
       description: fetch resource object
