--- a/charts/devtron/templates/migrator.yaml
+++ b/charts/devtron/templates/migrator.yaml
@@ -33,7 +33,7 @@ spec:
           envFrom:
             - secretRef:
                 name: devtron-secret
-          image: quay.io/devtron/devtron-utils:dup-chart-repo-v1.1.0
+          image: {{ include "fullImage" (dict "currentPosition" $.Values.components.migrator.devtron.initContainer.chartFix  "global" $.Values.global ) }}
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
 {{- toYaml $.Values.global.containerSecurityContext | nindent 12 }}
@@ -43,7 +43,7 @@ spec:
             - /bin/sh
             - -c
             - cp -r /scripts/. /shared/
-          image: {{ $.Values.components.devtron.image }}
+          image: {{ include "fullImage"   (dict "currentPosition" $.Values.components.devtron "image" $.Values.components.devtron.cicdImage  "digest" $.Values.components.devtron.cicdImageDigest  "global" $.Values.global ) }}
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
 {{- toYaml $.Values.global.containerSecurityContext | nindent 12 }}
@@ -76,7 +76,7 @@ spec:
             - secretRef:
                 name: postgresql-migrator
           {{- if .image }}        
-          image: {{ .image }}    
+          image: {{ include "fullImage"   (dict "currentPosition" $.Values.components.migrator  "global" $.Values.global ) }}
           {{- else }}
           image: migrate/migrate
           {{- end }} 
@@ -120,7 +120,7 @@ spec:
       {{- end }}
       containers:
       - name: devtron-rollout
-        image: "quay.io/devtron/kubectl:latest"
+        image: {{ include "fullImage"   (dict "currentPosition" $.Values.kubectlUtility  "global" $.Values.global ) }}
         command: ['sh', '-c', 'kubectl rollout restart deployment/devtron -n devtroncd && kubectl rollout restart deployment/kubelink -n devtroncd']
         {{- if .casbin }}
         {{- if .casbin.resources }}        
@@ -133,7 +133,7 @@ spec:
             - /bin/sh
             - -c
             - cp -r /scripts/. /shared/
-          image: {{ $.Values.components.devtron.image }}
+          image: {{ include "fullImage"   (dict "currentPosition" $.Values.components.devtron "image" $.Values.components.devtron.cicdImage  "digest" $.Values.components.devtron.cicdImageDigest  "global" $.Values.global ) }}
           name: init-devtron
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
@@ -165,7 +165,7 @@ spec:
             - secretRef:
                 name: postgresql-migrator
           {{- if .image }}        
-          image: {{ .image }}    
+          image: {{ include "fullImage"   (dict "currentPosition" $.Values.components.migrator  "global" $.Values.global ) }}
           {{- else }}
           image: migrate/migrate
           {{- end }} 
@@ -212,7 +212,7 @@ spec:
             - /bin/sh
             - -c
             - cp -r sql /shared/
-          image: {{ $.Values.components.gitsensor.image }}
+          image: {{ include "fullImage" (dict "currentPosition" $.Values.components.gitsensor  "global" $.Values.global ) }}
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
 {{- toYaml $.Values.global.containerSecurityContext | nindent 12 }}
@@ -245,7 +245,7 @@ spec:
             - secretRef:
                 name: postgresql-migrator
           {{- if .image }}        
-          image: {{ .image }}    
+          image: {{ include "fullImage"   (dict "currentPosition" $.Values.components.migrator  "global" $.Values.global ) }}
           {{- else }}
           image: migrate/migrate
           {{- end }} 
@@ -290,7 +290,7 @@ spec:
             - /bin/sh
             - -c
             - cp -r sql /shared/
-          image: {{ $.Values.components.lens.image }}
+          image: {{ include "fullImage" (dict "currentPosition" $.Values.components.lens  "global" $.Values.global ) }}
           name: init-lens
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
@@ -328,7 +328,7 @@ spec:
         - secretRef:
             name: postgresql-migrator
         {{- if .image }}        
-        image: {{ .image }}    
+        image: {{ include "fullImage"   (dict "currentPosition" $.Values.components.migrator  "global" $.Values.global ) }}
         {{- else }}
         image: migrate/migrate
         {{- end }} 
@@ -366,7 +366,11 @@ spec:
         runAsUser: 1000
       containers:
       - name: postgresql-miscellaneous
-        image: quay.io/devtron/postgres:11.9
+        {{- if not $.Values.installer.arch }}
+        image: {{ include "fullImage"   (dict "currentPosition" $.Values.components.postgres  "global" $.Values.global ) }}
+        {{- else }}
+        image: {{ include "fullImage"   (dict "currentPosition" $.Values.components.postgres.arm  "global" $.Values.global ) }}
+        {{- end }}
         securityContext:
           allowPrivilegeEscalation: false
           runAsUser: 1000
