--- a/wireNil.env
+++ b/wireNil.env
@@ -37,3 +37,6 @@ SCOPED_VARIABLE_ENABLED=true
 EXECUTE_WIRE_NIL_CHECKER=true
 TEST_BRANCH=
 LATEST_HASH=
+GOPATH=/usr/local/go
+PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/go/bin
+
