--- a/scripts/devtron-reference-helm-charts/deployment-chart_4-19-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/deployment-chart_4-19-0/values.yaml
@@ -43,18 +43,8 @@ Spec:
   Key: ""
 #  Key: kops.k8s.io/instancegroup 
   Values: ""
-affinity:
-  enabled: true
-  values:
-    podAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-      - labelSelector:
-          matchExpressions:
-          - key: security
-            operator: In
-            values:
-            - S1
-        topologyKey: topology.kubernetes.io/zone  
+
+affinity: {}
 
 image:
   pullPolicy: IfNotPresent
@@ -583,13 +573,9 @@ ConfigSecrets:
 #     key2: abc-2
 
 
-initContainers: 
+initContainers: []
   ## Additional init containers to run before the Scheduler pods.
   ## for example, be used to run a sidecar that chown Logs storage .
-  - name: volume-mount-hack
-    image: busybox
-    command: ["sh", "-c", "chown -R 1000:1000 logs"]
-    args: ["clone", "kamal"]
   #   volumeMounts:
   #    - mountPath: /usr/local/airflow/logs
   #      name: logs-data
@@ -597,17 +583,7 @@ initContainers:
   # # This will assign your application's docker image to init container.
   #   reuseContainerImage: true
 
-containers: 
-  - name: poll-services
-    reuseContainerImage: true
-    command:
-      - /bin/bash
-      - -c
-      - bash /tmp/curl.sh
-    volumeMounts:
-      - mountPath: /tmp/curl.sh
-        name: curl-services-cm-vol
-        subPath: curl.sh
+containers: []
   ## Additional init containers to run before the Scheduler pods.
   ## for example, be used to run a sidecar that chown Logs storage .
   #- name: volume-mount-hack
@@ -726,11 +702,4 @@ tolerations: []
 imagePullSecrets: []
   # - test1
   # - test2
-peristentVolumeClaim: 
-  name: kamal-pvc
-  storageClassName: gp2
-  storage: 8Gi
-  accessMode: 
-  - ReadWriteOnce
-  volumeMode: 
-  mountPath: "/tmp"
+peristentVolumeClaim: {}
